manifests/kinto/elasticsearch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: kinto
  labels:
    app: kinto
    component: elasticsearch
spec:
  ports:
  - name: "api"
    port: 9200
    targetPort: 9200
  selector:
    app: kinto
    component: elasticsearch

---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-cluster
  namespace: kinto  
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  clusterIP: None
  ports:
  - port: 9300
    protocol: TCP
    targetPort: 9300
  publishNotReadyAddresses: true
  selector:
    component: es
  sessionAffinity: None
  type: ClusterIP

# elasticsearch.yml:
#   discovery.zen:
#     minimum_master_nodes: ${NODE_QUORUM}
#     ping.unicast.hosts: elasticsearch-cluster

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: kinto
  # annotations:
  #   flux.weave.works/automated: "true"
  #   flux.weave.works/tag.elasticsearch: glob:6.2.*
  labels:
    app: kinto
    component: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kinto
      component: elasticsearch
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kinto
        component: elasticsearch
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: affinity/elasticsearch
      #           operator: In
      #           values:
      #           - "true"
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.5.1
        # env:
        # - name: ES_JAVA_OPTS
        #   value: -Xms1024m -Xmx1024m
        #   # ES_MEM_LIMIT=2g
        #   # ES_JVM_HEAP=1024m
        ports:
        - containerPort: 9200
        # FIXME port 9300 for cluster?
        # resources:
        #   limits:
        #     # memory: "2147483648"
        #     memory: 3Gi
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
        - name: data
          mountPath: /usr/share/elasticsearch/data
      # Allow non-root user to access PersistentVolume
      securityContext:
        fsGroup: 1000
      restartPolicy: Always
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch
      # - name: data
      #   hostPath:
      #     path: /srv/elasticsearch-data2
      # - name: data
      #   emptyDir: {}
