manifests/kinto/kinto.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kinto
  namespace: kinto
  labels:
    app: kinto
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: kinto.codeformuenster.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kinto
          servicePort: api
  tls:
  - hosts:
    - kinto.codeformuenster.org
    secretName: kinto-tls

---
apiVersion: v1
kind: Service
metadata:
  name: kinto
  namespace: kinto
  labels:
    app: kinto
spec:
  ports:
  - name: api
    port: 8888
    targetPort: api
  selector:
    app: kinto

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kinto
  namespace: kinto
  labels:
    app: kinto
spec:
  template:
    metadata:
      labels:
        app: kinto
    spec:
      containers:
      - name: kinto
        image: kinto/kinto-server:11.1.0
        ports:
        - name: api
          containerPort: 8888
